--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <!-- Last Published: Thu Apr 18 2024 07:27:13 GMT+0000 (Coordinated Universal Time) -->
-<html data-wf-domain="pesto.tech" data-wf-page="6572817dce00c4580340375c" data-wf-site="65159e844f8f08a72cefa2aa">
+<html data-wf-domain="#" data-wf-page="6572817dce00c4580340375c" data-wf-site="65159e844f8f08a72cefa2aa">
 
 <head>
     <meta charset="utf-8" />
-    <title>Podcasts</title>
-    <meta content="Podcasts" property="og:title" />
-    <meta content="Podcasts" property="twitter:title" />
+    <title>Resources</title>
+   
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="https://assets-global.website-files.com/65159e844f8f08a72cefa2aa/css/pesto-cf-f9e792274dadb3a463f338453764d9.webflow.52fd57711.min.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
@@ -16,8 +15,7 @@
             n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
         }(window, document);
     </script>
-    <link href="https://assets-global.website-files.com/65159e844f8f08a72cefa2aa/65159e844f8f08a72cefa59a_Favicon.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="https://assets-global.website-files.com/65159e844f8f08a72cefa2aa/65159e844f8f08a72cefa59b_Webclip.png" rel="apple-touch-icon" />
+   
     <script type="text/javascript">
         ! function(f, b, e, v, n, t, s) {
             if (f.fbq) return;
@@ -128,8 +126,8 @@
                                 <div class="paragraph-18px glowing-button-text">Vedios</div>
                             </div><img src="https://assets-global.website-files.com/65159e844f8f08a72cefa2aa/65159e844f8f08a72cefa510_Tag%20Line.svg" loading="lazy" alt="" class="tag-line-image" /></div>
                     </div>
-                    <h1 class="heading-48px podcast-hero-heading">Lorem ipsum, dolor sit amet  <span class="podcast-hero-heading-span-1">lorem</span> <span class="podcast-hero-heading-span-2">Lorem ipsum, dolor sit amet</span> Lorem ipsum, dolor </h1>
-                    <a data-link="1" href="#_"
+                    <h1 class="heading-48px podcast-hero-heading"> Immerse yourself<span class="podcast-hero-heading-span-1"> in diverse traditions</span> <span class="podcast-hero-heading-span-2"> and celebrations from</span>  across the globe. </h1>
+                    <a data-link="1" href="https://youtu.be/EZjb5N0vkDE?si=s6lNY10L0u5YxIO3_"
                         target="_blank" class="colored-button w-inline-block">
                         <div class="colored-button-inner play"><img src="https://assets-global.website-files.com/65159e844f8f08a72cefa2aa/65159e844f8f08a72cefa451_Play.svg" loading="lazy" alt="" class="colored-button-icon play" />
                             <div class="paragraph-18px colored-button-text">Start Watching</div>
@@ -168,11 +166,11 @@
                                             <div>Vedio</div>
                                             <div>1</div>
                                         </div>
-                                        <div class="heading-24px podcast-card-heading">Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit ame</div>
+                                        <div class="heading-24px podcast-card-heading">India celebrates the festival of lights Diwali, also known as Deepawali</div>
                                     </div>
                                 </div>
                                 <div class="podcast-button-wrap">
-                                    <a data-w-id="8e2fcb6c-dab5-d7cf-9958-5896797f25b1" href="#" target="_blank" class="podcast-button w-inline-block">
+                                    <a data-w-id="8e2fcb6c-dab5-d7cf-9958-5896797f25b1" href="https://youtu.be/AXnn1oqqtdI?si=ETsyyS5zsER5FM-Q" target="_blank" class="podcast-button w-inline-block">
                                         <div class="podcast-button-text-contain"><img src="https://assets-global.website-files.com/65159e844f8f08a72cefa2aa/65159e844f8f08a72cefa451_Play.svg" loading="lazy" alt="" class="podcast-button-icon" />
                                             <div class="paragraph-18px podcast-button-text">Watch Now</div>
                                         </div>
@@ -190,11 +188,11 @@
                                             <div>Vedio</div>
                                             <div>2</div>
                                         </div>
-                                        <div class="heading-24px podcast-card-heading">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                                        <div class="heading-24px podcast-card-heading">Best Traditional Indian Wedding Ceremony Video</div>
                                     </div>
                                 </div>
                                 <div class="podcast-button-wrap">
-                                    <a data-w-id="8e2fcb6c-dab5-d7cf-9958-5896797f25b1" href="#" target="_blank" class="podcast-button w-inline-block">
+                                    <a data-w-id="8e2fcb6c-dab5-d7cf-9958-5896797f25b1" href="https://youtu.be/X1eo1yWPMr4?si=gPjFRxM2Ze0JfCph" target="_blank" class="podcast-button w-inline-block">
                                         <div class="podcast-button-text-contain"><img src="https://assets-global.website-files.com/65159e844f8f08a72cefa2aa/65159e844f8f08a72cefa451_Play.svg" loading="lazy" alt="" class="podcast-button-icon" />
                                             <div class="paragraph-18px podcast-button-text">Watch Now</div>
                                         </div>
@@ -212,13 +210,13 @@
                                     <div class="podcast-text-contain">
                                         <div style="background-color:#fd68b3" class="podcast-tag-wrap">
                                             <div>Vedio</div>
-                                            <div>4</div>
+                                            <div>3</div>
                                         </div>
-                                        <div class="heading-24px podcast-card-heading">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                                        <div class="heading-24px podcast-card-heading">Bharatanatyam Dance | Best of Indian Classical Dance</div>
                                     </div>
                                 </div>
                                 <div class="podcast-button-wrap">
-                                    <a data-w-id="8e2fcb6c-dab5-d7cf-9958-5896797f25b1" href="#" target="_blank" class="podcast-button w-inline-block">
+                                    <a data-w-id="8e2fcb6c-dab5-d7cf-9958-5896797f25b1" href="https://youtu.be/JWhA3ldZcyY?si=k_Ptt9CpNA8AWxAN" target="_blank" class="podcast-button w-inline-block">
                                         <div class="podcast-button-text-contain"><img src="https://assets-global.website-files.com/65159e844f8f08a72cefa2aa/65159e844f8f08a72cefa451_Play.svg" loading="lazy" alt="" class="podcast-button-icon" />
                                             <div class="paragraph-18px podcast-button-text">Watch Now</div>
                                         </div>
